# Pubmed_research

./: GITHUB_UPLOAD_GUIDE.md  README.md  manifest.json  pyproject.toml
data/: MANIFEST.md  implementation_plan.json  implementation_plan.md  manifest.json
results/: pubmed_search_tool.py
workflow/: test_pubmed_tool.py
writing_outputs/: PEER_REVIEW.md  SUMMARY.md  progress.md
writing_outputs/drafts/: v1_draft.aux  v1_draft.out  v1_draft.toc
writing_outputs/figures/: data_flow_review_log.json  graphical_abstract_review_log.json  installation_steps_review_log.json  system_architecture_review_log.json  test_results_review_log.json
writing_outputs/final/: openwebui_pubmed_plugin_report.tex
writing_outputs/references/: references.bib
